# scuffle

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  codecov.yml  deny.toml  pnpm-lock.yaml  release-plz.toml  rustfmt.toml  taplo.toml
cloud/core/: Cargo.toml  README.md
cloud/core/src/: main.rs
cloud/proto/: Cargo.toml  README.md  build.rs
cloud/proto/src/: lib.rs
crates/aac/: CHANGELOG.md  Cargo.toml  README.md
crates/aac/src/: lib.rs
crates/amf0/: CHANGELOG.md  Cargo.toml  README.md
crates/amf0/src/: de.rs  decode.rs  decoder.rs  define.rs  encoder.rs  error.rs  errors.rs  lib.rs  ser.rs  value.rs
crates/amf0/src/de/: mod.rs  stream.rs
crates/av1/: CHANGELOG.md  Cargo.toml  README.md
crates/av1/src/: config.rs  lib.rs
crates/av1/src/obu/: mod.rs  seq.rs  utils.rs
crates/batching/: CHANGELOG.md  Cargo.toml  README.md
crates/batching/benchmarks/: batcher.rs  dataloader.rs
crates/batching/examples/: Cargo.toml
crates/batching/src/: batch.rs  dataloader.rs  lib.rs
crates/bootstrap/: CHANGELOG.md  Cargo.toml  README.md
crates/bootstrap/derive/: CHANGELOG.md  Cargo.toml  README.md
crates/bootstrap/derive/src/: lib.rs  main_impl.rs
crates/bootstrap/examples/: Cargo.toml  README.md  cli.rs
crates/bootstrap/examples/src/: basic.rs  cli.rs  tracing.rs
crates/bootstrap/src/: config.rs  global.rs  lib.rs  service.rs
crates/bootstrap/telemetry/: CHANGELOG.md  Cargo.toml  README.md
crates/bootstrap/telemetry/src/: lib.rs  opentelemetry.rs
crates/bytes-util/: CHANGELOG.md  Cargo.toml  README.md
crates/bytes-util/src/: bit_read.rs  bytes_cursor.rs  lib.rs  nal_emulation_prevention.rs  range_check.rs  zero_copy.rs
crates/bytes-util/src/cow/: mod.rs  serde.rs
crates/changelog/: CHANGELOG.md  Cargo.toml  README.md
crates/changelog/src/: lib.rs  macro_impl.rs
crates/context/: CHANGELOG.md  Cargo.toml  README.md
crates/context/src/: ext.rs  lib.rs
crates/expgolomb/: CHANGELOG.md  Cargo.toml  README.md
crates/expgolomb/src/: lib.rs
crates/ffmpeg/: CHANGELOG.md  Cargo.toml  README.md
crates/ffmpeg/src/: codec.rs  consts.rs  decoder.rs  dict.rs  encoder.rs  filter_graph.rs  frame.rs  lib.rs  log.rs  packet.rs  rational.rs  resampler.rs  scaler.rs  smart_object.rs  stream.rs  utils.rs
crates/ffmpeg/src/enums/: av_channel_order.rs  av_codec_id.rs  av_dict_flags.rs  av_discard.rs  av_fmt_flags.rs  av_io_flag.rs  av_media_type.rs  av_picture_type.rs  av_pixel_format.rs  av_pkt_flags.rs  av_rounding.rs  av_sample_format.rs  av_seek.rs
crates/ffmpeg/src/io/: channel.rs  input.rs  internal.rs  output.rs
crates/ffmpeg/src/snapshots/: scuffle_ffmpeg__decoder__tests__test_decoder_audio.snap
crates/flv/: CHANGELOG.md  Cargo.toml  README.md
crates/flv/src/: avc.rs  common.rs  error.rs  file.rs  header.rs  lib.rs  script.rs  tag.rs  video.rs
crates/flv/src/audio/: aac.rs  mod.rs
crates/flv/src/snapshots/: scuffle_flv__tests__demux_flv_hevc_aac.snap
crates/flv/src/video/: mod.rs
crates/future-ext/: CHANGELOG.md  Cargo.toml  README.md
crates/future-ext/src/: lib.rs
crates/h264/: CHANGELOG.md  Cargo.toml  README.md
crates/h264/src/: config.rs  io.rs  lib.rs  sps.rs
crates/h264/src/enums/: aspect_ratio_idc.rs  mod.rs  nal_unit_type.rs  video_format.rs
crates/h264/src/sps/: chroma_sample_loc.rs  color_config.rs  frame_crop_info.rs  mod.rs  pic_order_count_type1.rs  sample_aspect_ratio.rs  sps_ext.rs  timing_info.rs
crates/h265/: CHANGELOG.md  Cargo.toml  README.md  sps.hexpat  sps.hexproj  sps_sample
crates/h265/src/: config.rs  lib.rs  nal_unit_header.rs  range_check.rs  rbsp_trailing_bits.rs  sps.rs  tests.rs
crates/h265/src/enums/: aspect_ratio_idc.rs  constant_frame_rate.rs  mod.rs  nal_unit_type.rs  num_temporal_layers.rs  parallelism_type.rs  video_format.rs
crates/h265/src/snapshots/: scuffle_h265__config__tests__config_demux.snap
crates/h265/src/sps/: conformance_window.rs  long_term_ref_pics.rs  mod.rs  (+9 more)
crates/http/: CHANGELOG.md  Cargo.toml  README.md
crates/http/examples/: Cargo.toml  README.md  axum.rs  echo_tls.rs
crates/http/src/: body.rs  config.rs  error.rs  lib.rs  server.rs  service.rs  util.rs
crates/metrics/: CHANGELOG.md  Cargo.toml  README.md
crates/metrics/derive/: CHANGELOG.md  Cargo.toml  README.md
crates/metrics/examples/: Cargo.toml  README.md  derive.rs  prometheus.rs
crates/metrics/src/: collector.rs  lib.rs  value.rs
crates/mp4/: CHANGELOG.md  Cargo.toml  README.md
crates/mp4/src/: codec.rs  lib.rs
crates/nutype_enum/: CHANGELOG.md  Cargo.toml  README.md
crates/nutype_enum/src/: lib.rs
crates/openapiv3_1/: CHANGELOG.md  Cargo.toml  README.md
crates/openapiv3_1/src/: extensions.rs  info.rs  lib.rs  path.rs  request_body.rs  schema.rs  security.rs
crates/postcompile/: CHANGELOG.md  Cargo.toml  README.md
crates/postcompile/src/: deps.rs  features.rs  lib.rs
crates/pprof/: CHANGELOG.md  Cargo.toml  README.md
crates/pprof/examples/: Cargo.toml  README.md
crates/pprof/src/: cpu.rs  lib.rs
crates/rtmp/: CHANGELOG.md  Cargo.toml  README.md
crates/rtmp/examples/: Cargo.toml  README.md  basic.rs
crates/rtmp/src/: error.rs  lib.rs
crates/settings/: CHANGELOG.md  Cargo.toml  README.md
crates/settings/examples/: Cargo.toml  README.md  cli.rs
crates/settings/src/: lib.rs
crates/signal/: CHANGELOG.md  Cargo.toml  README.md
crates/signal/src/: bootstrap.rs  lib.rs
crates/tinc/: CEL.md  CHANGELOG.md  Cargo.toml  README.md  todo.yaml
crates/tinc/cel/: CHANGELOG.md  Cargo.toml  README.md
crates/tinc/derive/: CHANGELOG.md  Cargo.toml  README.md
crates/tinc/integration/: Cargo.toml  README.md  build.rs
crates/tinc/pb/: Cargo.toml  annotations.proto  build.rs  cel.md
crates/tinc/pb-prost/: CHANGELOG.md  Cargo.toml  README.md  annotations.proto  build.rs
crates/tinc/src/: helpers.rs  lib.rs  serde_helpers.rs  well_known.rs
crates/transmuxer/: CHANGELOG.md  Cargo.toml  README.md
crates/transmuxer/src/: define.rs  errors.rs  lib.rs
dev-tools/xtask/: Cargo.toml  README.md
dev-tools/xtask/src/: main.rs  utils.rs
(+372 files in other folders)
