[workspace]

members = [
    "crates/aac",
    "crates/amf0",
    "crates/av1",
    "crates/batching",
    "crates/bootstrap",
    "crates/bootstrap/derive",
    "crates/bootstrap/telemetry",
    "crates/bytes-util",
    "crates/context",
    "crates/expgolomb",
    "crates/ffmpeg",
    "crates/flv",
    "crates/future-ext",
    "crates/h264",
    "crates/h265",
    "crates/http",
    "crates/metrics",
    "crates/metrics/derive",
    "crates/mp4",
    "crates/nutype_enum",
    "crates/postcompile",
    "crates/pprof",
    "crates/rtmp",
    "crates/settings",
    "crates/signal",
    "crates/transmuxer",
    "crates/workspace-hack",
    "dev-tools/xtask",
    "crates/tinc",
    "crates/tinc/cel",
    "crates/tinc/pb-prost",
    "crates/tinc/build",
    "crates/tinc/derive",
    "crates/tinc/integration",
    "crates/openapiv3_1",
    "crates/changelog",
]

resolver = "2"

[workspace.dependencies]
scuffle-workspace-hack = { version = "0.1.0" }


[profile.release-debug]
inherits = "release"
debug = true

[patch.crates-io]
scuffle-workspace-hack.path = "crates/workspace-hack"
scuffle-aac.path = "crates/aac"
scuffle-amf0.path = "crates/amf0"
scuffle-av1.path = "crates/av1"
scuffle-batching.path = "crates/batching"
scuffle-bootstrap.path = "crates/bootstrap"
scuffle-bootstrap-derive.path = "crates/bootstrap/derive"
scuffle-bootstrap-telemetry.path = "crates/bootstrap/telemetry"
scuffle-bytes-util.path = "crates/bytes-util"
scuffle-context.path = "crates/context"
scuffle-expgolomb.path = "crates/expgolomb"
scuffle-ffmpeg.path = "crates/ffmpeg"
scuffle-flv.path = "crates/flv"
scuffle-future-ext.path = "crates/future-ext"
scuffle-http.path = "crates/http"
scuffle-metrics.path = "crates/metrics"
scuffle-metrics-derive.path = "crates/metrics/derive"
postcompile.path = "crates/postcompile"
scuffle-pprof.path = "crates/pprof"
scuffle-settings.path = "crates/settings"
scuffle-signal.path = "crates/signal"
nutype-enum.path = "crates/nutype_enum"
scuffle-h264.path = "crates/h264"
scuffle-h265.path = "crates/h265"
scuffle-mp4.path = "crates/mp4"
scuffle-rtmp.path = "crates/rtmp"
scuffle-transmuxer.path = "crates/transmuxer"
tinc.path = "crates/tinc"
tinc-cel.path = "crates/tinc/cel"
tinc-pb-prost.path = "crates/tinc/pb-prost"
tinc-build.path = "crates/tinc/build"
tinc-derive.path = "crates/tinc/derive"
openapiv3_1.path = "crates/openapiv3_1"
scuffle-changelog.path = "crates/changelog"
