[workspace]

members = [
  "crates/aac",
  "crates/amf0",
  "crates/av1",
  "crates/batching",
  "crates/bootstrap",
  "crates/bootstrap/derive",
  "crates/bootstrap/telemetry",
  "crates/bytes-util",
  "crates/context",
  "crates/expgolomb",
  "crates/ffmpeg",
  "crates/flv",
  "crates/future-ext",
  "crates/h264",
  "crates/h265",
  "crates/http",
  "crates/metrics",
  "crates/metrics/derive",
  "crates/mp4",
  "crates/nutype_enum",
  "crates/postcompile",
  "crates/pprof",
  "crates/rtmp",
  "crates/settings",
  "crates/signal",
  "crates/transmuxer",
  "crates/workspace-hack",
  "dev-tools/xtask",
  "crates/tinc",
  "crates/tinc/cel",
  "crates/tinc/pb-prost",
  "crates/tinc/build",
  "crates/tinc/derive",
  "crates/tinc/integration",
  "crates/openapiv3_1",
  "crates/changelog",
  "cloud/proto",
  "cloud/core",
]

resolver = "3"

[workspace.dependencies]
scuffle-workspace-hack = "0.1.0"

[workspace.metadata.xtask.release.packages]
tinc = "0.1.4"
tinc-build = "0.1.4"
tinc-cel = "0.1.4"
tinc-derive = "0.1.4"
tinc-pb-prost = "0.1.4"

[profile.release-debug]
inherits = "release"
debug = true

[patch.crates-io.scuffle-workspace-hack]
path = "crates/workspace-hack"
