[package]
name = "scuffle-amf0"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A pure-rust implementation of AMF0 encoder and decoder."
repository = "https://github.com/scufflecloud/scuffle"
keywords = ["amf0", "rtmp", "flash", "video", "flv"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
serde = { version = "1", optional = true }
bytes = "1.10.1"
byteorder = "1.5"
num-traits = "0.2"
num-derive = "0.4"
thiserror = "2.0"
bytestring = "1.4.0"
scuffle-bytes-util = { workspace = true }
scuffle-workspace-hack.workspace = true

[dev-dependencies]
serde_derive = "1"

[features]
serde = ["dep:serde", "scuffle-bytes-util/serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
