[package]
name = "scuffle-amf0"
version = "0.2.3"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A pure-rust implementation of AMF0 encoder and decoder."
repository = "https://github.com/scufflecloud/scuffle"
keywords = ["amf0", "rtmp", "flash", "video", "flv"]
authors = ["Scuffle <opensource@scuffle.cloud>"]
documentation = "https://docs.rs/scuffle-amf0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
byteorder = "1.5"
bytes = "1.10.1"
bytestring = "1.4.0"
document-features = { optional = true, version = "0.2" }
num-derive = "0.4"
num-traits = "0.2"
scuffle-bytes-util = { path = "../bytes-util", version = "0.1.3" }
scuffle-changelog = { optional = true, path = "../changelog", version = "0.1.0" }
scuffle-workspace-hack.workspace = true
serde = { optional = true, version = "1" }
thiserror = "2.0"

[dev-dependencies]
serde_derive = "1"

[features]
## Enables serde support
serde = ["dep:serde", "scuffle-bytes-util/serde"]
## Enables changelog and documentation of feature flags
docs = ["dep:scuffle-changelog", "dep:document-features"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
  "--cfg",
  "docsrs",
  "--sort-modules-by-appearance",
  "--generate-link-to-definition",
]

[package.metadata.xtask.powerset]
additive-features = ["docs", "serde"]

[package.metadata.cargo-sync-rdme.rustdoc.mappings]
changelog = "./CHANGELOG.md"

[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
license = true
docs-rs = true
crates-io = true
github-actions = { workflows = "ci.yaml" }
codecov = true
