[package]
name = "scuffle-batching"
version = "0.1.3"
edition = "2024"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-batching"
license = "MIT OR Apache-2.0"
description = "Optimized batching and dataloading for external services."
keywords = ["batching", "dataloading", "external", "services", "async"]

[[bench]]
name = "scuffle-batching-batcher"
harness = false
path = "benchmarks/batcher.rs"

[[bench]]
name = "scuffle-batching-dataloader"
harness = false
path = "benchmarks/dataloader.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage_nightly)',
  'cfg(valgrind)',
] }

[features]
## Enables changelog and documentation of feature flags
docs = ["dep:scuffle-changelog", "dep:document-features"]

[dependencies]
document-features = { optional = true, version = "0.2" }
scuffle-changelog = { optional = true, path = "../changelog", version = "0.1.0" }
scuffle-workspace-hack.workspace = true
tokio = { default-features = false, features = ["rt", "sync", "time"], version = "1" }
tokio-util = "0.7"

[dev-dependencies]
criterion = { features = ["async_tokio"], version = "0.5.1" }
futures = "0.3"
tokio = { features = ["macros"], version = "1" }
tokio-test = "0.4.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
  "--cfg",
  "docsrs",
  "--sort-modules-by-appearance",
  "--generate-link-to-definition",
]

[package.metadata.xtask.powerset]
additive-features = ["docs"]

[package.metadata.cargo-sync-rdme.rustdoc.mappings]
changelog = "./CHANGELOG.md"

[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
license = true
docs-rs = true
crates-io = true
github-actions = { workflows = "ci.yaml" }
codecov = true
