[package]
name = "scuffle-bytes-util"
version = "0.1.1"
edition = "2024"
description = "A utility crate for working with bytes."
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-bytes-util"
license = "MIT OR Apache-2.0"
keywords = ["bytes", "util"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
bytes = "1.5"
bytestring = "1.4.0"
byteorder = "1.5.0"
serde = { version = "1.0.129", optional = true }
scuffle-workspace-hack.workspace = true

[features]
serde = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo_check_external_types]
allowed_external_types = [
  # major released
  "bytes::*",

  # workspace-specific (safe to expose within the same ecosystem)
  "scuffle_workspace_hack::*",
]
