[package]
name = "scuffle-ffmpeg"
version = "0.3.0"
edition = "2024"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-ffmpeg"
license = "MIT OR Apache-2.0"
description = "FFmpeg bindings for Rust."
keywords = ["ffmpeg", "video", "audio", "media"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
libc = "0.2"
bytes = { optional = true, version = "1" }
tokio = { optional = true, version = "1", features = ["sync"] }
crossbeam-channel = { optional = true, version = "0.5.13" }
tracing = { optional = true, version = "0.1" }
arc-swap = { version = "1.7" }
rusty_ffmpeg = "0.16.1"
scuffle-workspace-hack.workspace = true
nutype-enum = "0.1.2"
rand = "0.9"
bon = "3.3.2"
thiserror = "2.0"
va_list = "0.2"
scuffle-changelog = { version = "0.1", optional = true }
document-features = { version = "0.2", optional = true }

[dev-dependencies]
insta = { version = "1.42", features = ["filters"] }
tempfile = "3.15"
tracing-test = "0.2"
tracing-subscriber = "0.3"
scuffle-mp4 = "0.1.1"
sha2 = "0.10"
bytes = "1"

[features]
default = ["link_system_ffmpeg"]
## Enables channel support for IO
channel = ["dep:bytes"]
## Enables tokio channel support
tokio-channel = ["channel", "dep:tokio"]
## Enables crossbeam-channel support
crossbeam-channel = ["channel", "dep:crossbeam-channel"]
## Enables tracing support
tracing = ["dep:tracing"]
## Links ffmpeg via system
link_system_ffmpeg = ["rusty_ffmpeg/link_system_ffmpeg"]
## Links ffmpeg via vcpkg
link_vcpkg_ffmpeg = ["rusty_ffmpeg/link_vcpkg_ffmpeg"]
## Enables changelog and documentation of feature flags
docs = ["dep:scuffle-changelog", "dep:document-features"]

[package.metadata.xtask.powerset]
# Note: `link_system_ffmpeg` nor `link_vcpkg_ffmpeg` are additive features because
# they change the build.rs and therefore require a full rebuild of the crate.
additive-features = ["channel", "tokio-channel", "crossbeam-channel", "tracing", "docs"]
always_include_features = ["link_system_ffmpeg"]

[package.metadata.docs.rs]
features = ["channel", "tokio-channel", "crossbeam-channel", "tracing", "docs"]
rustdoc-args = ["--cfg", "docsrs", "--sort-modules-by-appearance", "--generate-link-to-definition"]

[package.metadata.cargo-sync-rdme.rustdoc.mappings]
changelog = "./CHANGELOG.md"

[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
license = true
docs-rs = true
crates-io = true
github-actions = { workflows = "ci.yaml" }
codecov = true
